--- a/drivers/char/Makefile
+++ b/drivers/char/Makefile
@@ -44,6 +44,12 @@ obj-$(CONFIG_PPDEV)		+= ppdev.o
 obj-$(CONFIG_NWBUTTON)		+= nwbutton.o
 obj-$(CONFIG_NWFLASH)		+= nwflash.o
 obj-$(CONFIG_SCx200_GPIO)	+= scx200_gpio.o
+obj-$(CONFIG_DBEAM_ADC)		+= adc.o
+obj-$(CONFIG_DBEAM_DAC)		+= dac.o
+obj-$(CONFIG_DBEAM_STEPPER1)	+= stepper1.o
+obj-$(CONFIG_DBEAM_STEPPER2)	+= stepper2.o
+obj-$(CONFIG_DBEAM_STEPPER3)	+= stepper3.o
+obj-$(CONFIG_DBEAM_EXT_TRIGGER)	+= external_trigger.o
 obj-$(CONFIG_PC8736x_GPIO)	+= pc8736x_gpio.o
 obj-$(CONFIG_NSC_GPIO)		+= nsc_gpio.o
 obj-$(CONFIG_GPIO_TB0219)	+= tb0219.o
